@@ -1,3 +1,9 @@
+2015-10-14  Jean Delvare  <jdelvare@suse.de>
+
+	* util.c: Avoid SIGBUS on mmap failure.
+	  This fixes Savannah bug #46066:
+	  https://savannah.nongnu.org/bugs/?46066
+
 2015-10-01  Roy Franz  <roy.franz@linaro.org>
 
 	* dmiopt.c: Add "--no-sysfs" option description to -h output.
